Move old html files under html folder

--- a/src/templates/html/Energy_bus.html
+++ b/src/templates/html/Energy_bus.html
@@ -4,8 +4,7 @@
 <div style="height: 0px;"><a href="map.html"><small><small>(Back to map page)</small></small></a><a href="www.theenergybus.com"><br>
 </a>
 </div>
-
-
+ 
 
 
 
@@ -161,13 +160,18 @@ feeling good and letting this feeling and happiness shine on others."<br>
 give from power. When you feel bad and try to feel good by pleaseing
 others you only give away your power ... and this makes you weaker!"<br>
 (101)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "He has a big heart", "she
-puts her heart into her work" and £they have a lot of heart" - need to
+puts her heart into her work" and "they have a lot of heart" - need to
 lead from the heart, this is where real emotion comes from.<br>
 (106)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "Positive energy spreads via a life touching a life touching a life".<br>
 (107)&nbsp;&nbsp; &nbsp;7) Enthusiasm attracts more passengers and energizes them during the ride<br>
 (107)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "CEO's - chief energy
 officers live and work with enthusiasm. They tap the power of their
 heart by getting excited about being alive!".<br>
+
+
+
+
+
 (108)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "When you're enthusiastic people want to get on your bus! Your bus is energised!"<br>
 (110)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "Enthusiasm has to be
 real, not the bouncing off walls type. You have to live it! Let your
@@ -180,7 +184,7 @@ needs to go and what you need for your ride!".<br>
 (114)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "Love is the answer for the team's success"<br>
 (115)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "Become a love magnet by
 loving your employees, your customers, your company and your family!
-YOu become a Love Magnet by 'sharing love generously'".<br>
+You become a Love Magnet by 'sharing love generously'".<br>
 (115)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "All any of us want is to feel loved"<br>
 (116)&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- "Enthusiasm is what gets
 people excited about being on your bus, but love is what keeps them on
