--- a/src/templates/html/git.html
+++ b/src/templates/html/git.html
@@ -44,10 +44,10 @@
       <li>git checkout -b &lt;name&gt; &lt;another_branch&gt;<br>
       </li>
     </ul>
-    <div style="margin-left: 40px;">Changes the git repository so that the
-      named branch is taken into use, or creates a new branch in the
-      repository if the name doesn't exist based on the current repository
-      status or that pointed by the optional another_branch.<br>
+    <div style="margin-left: 40px;">Changes the git repository so that the named
+      branch is taken into use, or creates a new branch in the repository if the
+      name doesn't exist based on the current repository status or that pointed
+      by the optional another_branch.<br>
     </div>
     <ul>
       <li>git add .</li>
@@ -59,9 +59,9 @@
     <ul>
       <li>git commit -m 'task description'</li>
     </ul>
-    <div style="margin-left: 40px;">Commits the current added changes using
-      the task description. I.e. removes the git commit stage to put the
-      comment in away from the command line.<br>
+    <div style="margin-left: 40px;">Commits the current added changes using the
+      task description. I.e. removes the git commit stage to put the comment in
+      away from the command line.<br>
     </div>
     <ul>
       <li>git status</li>
@@ -94,9 +94,9 @@
     <ul>
       <li>git merge &lt;branch&gt;</li>
     </ul>
-    <div style="margin-left: 40px;">Merges a branch with the current
-      branch. So if you create a number of branches and then merge back the
-      desired changes back into the master.<br>
+    <div style="margin-left: 40px;">Merges a branch with the current branch. So
+      if you create a number of branches and then merge back the desired changes
+      back into the master.<br>
     </div>
     <ul>
       <li>git diff</li>
@@ -131,5 +131,10 @@
     <br>
     Smartgithg gui interface<br>
     http://www.syntevo.com/smartgit/<br>
+    <br>
+    <br>
+    -------<br>
+    Stage all files whether added or deleted<br>
+    git add -u <br>
   </body>
 </html>
