--- a/src/templates/html/index.html
+++ b/src/templates/html/index.html
@@ -47,7 +47,7 @@
     <br>
     <a href="cricket.html">Cricket development</a><br>
     <br>
-    <a href="C-optimization.html">C optimisation</a><br>
+    <a href="C_optimization.html">C optimisation</a><br>
     <br>
     -------------<br>
     Info:<br>
