--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -73,7 +73,7 @@
 
 				<form class="margin-base-vertical">
 					<p class="text-center">
-					<a href="index.html" class="btn btn-primary btn-lg">Enter</a>
+					<a href="home.html" class="btn btn-primary btn-lg">Enter</a>
 						<button type="submit" class="btn btn-success btn-lg">Admin-entry</button>
 					</p>
 					</span>
