Update base.html to have all the working links

--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -26,41 +26,33 @@
         <div class="collapse navbar-collapse bs-example-js-navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a id="drop1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              
+	      <a id="drop1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 Lou
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop1">
-                <li><a href="#">Things to do</a></li>
+                <li><a href="html/Lou_Andy_things_to_do.html">Andy Lou things to do</a></li>
+                <li><a href="html/Things_to_do.html">Things to do</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Energy bus</a></li>
+                <li><a href="html/Energy_bus.html">Energy bus</a></li>
+                <li><a href="html/Energy_bus_exercises.html">Energy bus exercises</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">The secret</a></li>
+                <li><a href="html/The_Secret.html">The secret</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/Bands_I_like.html">Bands I like</a></li>
               </ul>
+	      
             </li>
-            <li class="dropdown">
-              <a id="drop2" href="html/cricket.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <li>
+              <a href="html/cricket.html">
                 Cricket
-                <span class="caret"></span>
               </a>
-              <ul class="dropdown-menu" aria-labelledby="drop2">
-                <li><a href="#">Version 1</a></li>
-                <li><a href="#">Version 2</a></li>
-                <li><a href="#">Version 3</a></li>
-              </ul>
             </li>
-            <li class="dropdown">
-              <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <li>
+              <a href="html/raspberry_pi.html">
                 Raspberry pi
-                <span class="caret"></span>
               </a>
-              <ul class="dropdown-menu" aria-labelledby="drop3">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
             </li>
             <li class="dropdown">
               <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -68,24 +60,39 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop3">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="html/apache.html">Apache</a></li>
+                <li><a href="html/django.html">Django</a></li>
+                <li><a href="html/hosts.html">Hosts</a></li>
+                <li><a href="html/mediawiki_tikiwiki.html">Media wiki/Tiki wiki</a></li>
               </ul>
-            </li>
+            </li>	   	    
             <li class="dropdown">
-              <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <a id="drop3" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >
                 Work
-                <span class="caret"></span>
-              </a>
+		<span class="caret" ></span>
+	      </a>
               <ul class="dropdown-menu" aria-labelledby="drop3">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="html/cv.html">CV</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="html/Accenture.html">Accenture</a></li>
+                <li><a href="html/nsn.html">NSN</a></li>
+                <li><a href="html/Renesas.html">Renesas</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/ANPR.html">ANPR</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/C_optimization.html">C optimization</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/git.html">GIT</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/java.html">Java</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/ls_ll.html">ls ll</a></li>
+                <li><a href="html/symbolic_links.html">Symbolic links</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="html/LTE.html">LTE</a></li>
+                <li><a href="html/Modulation.html">Modulation</a></li>
+                <li><a href="html/Real_timeOS.html">Real-time OS</a></li>
+                <li><a href="html/speech_codec.html">Speech codec</a></li>
               </ul>
             </li>
           </ul> 
@@ -104,6 +111,22 @@
     </div><!-- /.container -->
 
 
+
+<!-- Split button -->
+<div class="btn-group">
+  <button type="button" class="btn btn-danger">Action</button>
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
