--- a/src/templates/html/Lou_Andy_things_to_do.html
+++ b/src/templates/html/Lou_Andy_things_to_do.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Lou-Andy things to do</title></head><body>
-<div style="text-align: center;"><big><big>Lou things to do</big></big><br>
-</div>
-<big><big>
-</big></big>
-
-<br>
-<ul>
-<li>Riverdance</li>
-  <li>Eastborne</li>
-  <li>Eden project</li>
-  <li><a href="http://www.minack.com/">Manick theatre</a> (to be booked after March 2015)</li>
-  <li>Thorpe park (to be booked after March 2015)</li>
-  <li>Spa day</li>
-  <li>Chessington world of adventure  (to be booked after March 2015)</li>
-  <li>New Forest cycle</li>
-  <li>Cheddar gorge</li>
-  <li>Alton towers</li>
-  <li>Rock choir</li>
-  <li>Opera</li>
-  <li>Ballet</li>
-  <li>Denbies</li>
-  <li>Tooting bec 100m Lido</li>
-  <li>cirque du soleil (tickets need to be booked now :()</li>
-  <li>Stratford theatre</li>
-  <li>Bourton on the water</li>
-  <li>paris by eurostar</li>
-  <li>Turkish bath</li>
-  <li>Haidrians wall</li>
-  <li>York minster</li>
-  <li>Lizard peninsula</li>
-  <li>Canterbury Cathedral</li>
-  <li>White cliffs of Dover</li>
-  <li>Lydford gorge</li>
-  <li>Nottinghill carnival (30-31st August 2015)<br>
-  </li>
-  <li>Cranleigh carnival<br>
-  </li>
-
-</ul>
-<ul>
-  <li>Egypt</li>
-  <li>Morocco</li>
-  <li>Norway Fjords</li>
-  <li>Iceland<br>
-  </li>
-
-  <li>LeMans</li>
-</ul>
-
-  
-
-<ul>
-  <li>Comrades</li>
-  <li>Hawaii</li>
-  <li>Neolithic marathon<br>
-  </li>
-</ul>
-</body></html>
+<html>
+  <head>
+    <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+    <title>Lou-Andy things to do</title>
+  </head>
+  <body>
+    <div style="text-align: center;"><big><big>Lou things to do</big></big><br>
+    </div>
+    <big><big>
+      </big></big>
+    <br>
+    <ul>
+      <li>Thorpe park (to be booked after March 2015)</li>
+      <li>Spa day</li>
+      <li>Chessington world of adventure (to be booked after March 2015)</li>
+      <li>New Forest cycle</li>
+      <li>Alton towers</li>
+      <li>Rock choir</li>
+      <li>Opera</li>
+      <li>Ballet</li>
+      <li>Denbies</li>
+      <li>Tooting bec 100m Lido</li>
+      <li>cirque du soleil (tickets need to be booked now :()</li>
+      <li>paris by eurostar</li>
+      <li>Turkish bath</li>
+      <li>Haidrians wall</li>
+      <li>York minster</li>
+      <li>Lizard peninsula</li>
+      <li>Canterbury Cathedral</li>
+      <li>White cliffs of Dover</li>
+      <li>Lydford gorge</li>
+      <li>Nottinghill carnival (30-31st August 2015)<br>
+      </li>
+      <li>Cranleigh carnival<br>
+      </li>
+    </ul>
+    <ul>
+      <li>Egypt</li>
+      <li>Morocco</li>
+      <li>Norway Fjords</li>
+      <li>Iceland<br>
+      </li>
+      <li>LeMans</li>
+    </ul>
+    <ul>
+      <li>Comrades</li>
+      <li>Hawaii</li>
+      <li>Neolithic marathon</li>
+    </ul>
+    <p>DONE:</p>
+    <ul>
+      <li>Riverdance</li>
+      <li>Eastborne</li>
+      <li>Eden project</li>
+      <li>Stratford theatre</li>
+      <li>Bourton on the water</li>
+      <li><a href="http://www.minack.com/">Manick theatre</a> (to be booked
+        after March 2015)</li>
+      <li>Cheddar gorge</li>
+    </ul>
+    <ul>
+    </ul>
+  </body>
+</html>
