--- a/src/templates/html/Things_to_do.html
+++ b/src/templates/html/Things_to_do.html
@@ -11,50 +11,32 @@
       <div style="text-align: left;"><big>Today:</big><br>
         <div style="text-align: left;">
           <ul>
-            <li>Stretch morning</li>
-            <li><br>
-            </li>
-            <li>Ice morning</li>
-            <li>Read 15 pages</li>
-            <li>&nbsp;&nbsp;&nbsp; Ice afternoon</li>
-            <li>&nbsp;&nbsp;&nbsp; Stretch + exercise afternoon</li>
-            <li><br>
-            </li>
-            <li>Put django on raspberry pi</li>
-            <li>&nbsp;&nbsp;&nbsp; Varnish chair</li>
             <li>&nbsp;&nbsp;&nbsp; Stretch in evening</li>
           </ul>
           Tomorrow:<br>
           <ul>
-            <li>Do 2 puzzles</li>
-            <li><br>
-            </li>
-            <li>Change Lou bike pedals</li>
+            <li>walk</li>
+            <li>clean teeth</li>
+            <li>Stretch morning</li>
+            <li>Stretch + exercise afternoon</li>
             <li>Pump car tyres up</li>
             <li>Add water to windscreen wash</li>
             <li>Add oil to car</li>
+            <li>Haircut</li>
           </ul>
           <ul>
-            <li>Nationwide ISA</li>
+            <li>Nationwide</li>
           </ul>
-          <ul>
-            <li>Nationwide move money</li>
-          </ul>
-          <p><br>
-          </p>
           <p>Mid-term:</p>
         </div>
         <ul>
-          <li>Finish GSM book</li>
           <li>Cricket</li>
           <li>Sort out website</li>
           <li>spinlister.com</li>
         </ul>
         <big><br>
-          <big>
-          </big></big></div>
-      <div style="text-align: left;">
-        Long-term:<br>
+          <big> </big></big></div>
+      <div style="text-align: left;"> Long-term:<br>
         <ul>
           <li>GIT</li>
           <li>Real-time OS<br>
