More updates with carousel

--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -106,10 +106,86 @@
     <div class="container">
 
       <div class="starter-template">
-        <p class="lead">- Carosel of screenshots</p>
+        <p class="lead">Add a summary and positive energy here, then I could add:</p>      
         <p class="lead">- things to do</p>
         <p class="lead">- diary</p>
       </div>
+      
+      
+  
+
+  
+      
+  <div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+      <a href="html/Energy_bus.html">
+        <img src="{% static 'site/img/Ticket-RideLife600.jpg' %}" alt="Energy bus">
+          <div class="carousel-caption">
+            <h3>Get on the energy bus!</h3>
+            <p>Fill your life with positivity</p>
+          </div>
+      </a>
+      </div>
+
+      <div class="item">
+      <a href="html/cricket.html">
+        <img src="{% static 'site/img/cricket.JPG' %}" alt="Cricket">
+          <div class="carousel-caption">
+            <h3 color=black>An old Amstrad CPC464 game</h3>
+            <p>And a good way to learn C++</p>
+          </div>
+      </a>
+      </div>
+    
+      <div class="item">
+      <a href="#">
+        <img src="{% static 'site/img/IMG_6515.jpg' %}" alt="Running">
+          <div class="carousel-caption">
+            <h3>Hopefully I'll get back to this</h3>
+            <p>And take the positives out of the experience</p>
+          </div>
+       </a>
+       </div>
+
+      <div class="item">
+      <a href="html/Lou_Andy_things_to_do.html">
+        <img src="{% static 'site/img/Lou.jpg' %}" alt="Lou">
+          <div class="carousel-caption">
+            <h3></h3>
+            <p></p>
+          </div>
+       </a>
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+    
+      
+      
+      
+      
 
     </div><!-- /.container -->
 
