--- a/src/static/starter-template.css
+++ b/src/static/starter-template.css
@@ -1,10 +1,10 @@
 body { 
-  padding-top: 70px; 
-  margin-bottom:80px;
+  padding-top: 40px; 
+  margin-bottom:20px;
 }
 
 .starter-template {
-  padding: 40px 15px;
+  padding: 10px 10px;
   text-align: left;
 }
 
@@ -81,3 +81,17 @@ body {
     border-radius: 6px 0 6px 6px;
 }
 
+
+
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      margin: auto;
+  }
+
+.carousel-indicators li{
+background: #ccc;
+}
+
+.carousel-indicators .active {
+    background: #666;
+}
